<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arnhom.cryptoku.activities.HowTo">

    <TextView
        android:text="@string/how_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/textView2"
        android:textSize="50sp"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        android:textStyle="normal|italic" />

    <Button
        android:text="@string/how_to_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/howToDoneButton"
        android:background="@android:color/transparent"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_light"
        android:onClick="onDone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/howToDoneButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/how_to_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textSize="30sp"
                android:textAllCaps="true" />

            <TextView
                android:text="@string/how_to_goal_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textSize="18sp"
                android:paddingLeft="70dp"
                android:paddingBottom="20dp" />

            <TextView
                android:text="@string/how_to_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView14"
                android:textSize="30sp"
                android:textAllCaps="true" />

            <TextView
                android:text="@string/how_to_rules_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView15"
                android:textSize="18sp"
                android:paddingLeft="70dp"
                android:paddingBottom="20dp" />


            <TextView
                android:text="@string/how_to_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textSize="30sp"
                android:textAllCaps="true" />



            <TextView
                android:text="@string/how_to_controls_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textSize="18sp"
                android:paddingLeft="70dp"
                android:paddingBottom="20dp" />

            <TextView
                android:text="@string/how_to_operators"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textSize="30sp"
                android:textAllCaps="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/how_to_additionsubtraction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:textSize="18sp"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/textView9"
                    android:paddingBottom="20dp" />

                <TextView
                    android:text="+\n-"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:textSize="50sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/how_to_multiplicationdivision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:textSize="18sp"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/textView11"
                    android:paddingBottom="20dp" />

                <TextView
                    android:text="x\n÷"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    android:textSize="50sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/how_to_insertionbackspace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12"
                    android:textSize="18sp"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/textView13"
                    android:paddingBottom="20dp" />

                <TextView
                    android:text="→\n↚"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    android:textSize="50sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="70dp"
                    android:textAlignment="center" />
            </RelativeLayout>

        </LinearLayout>


    </ScrollView>
</RelativeLayout>