<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arnhom.cryptoku.activities.CustomPuzzleMenu">

    <TextView
        android:text="@string/play_custom_puzzle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/textView"
        android:textStyle="normal|italic"
        android:gravity="center_horizontal"
        android:textColor="@android:color/background_light"
        android:textAllCaps="true"
        android:textSize="40dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:text="@string/depth"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/depthText"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center_vertical" />

        <TextView
            android:text="@string/operators"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/operatorsText"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:gravity="center_vertical|center_horizontal" />

        <LinearLayout
            android:layout_column="1"
            android:layout_row="0"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:text="@string/leftSymbol"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDepthDivide"
                android:layout_width="50dp"
                android:onClick="onDepthDivide"/>

            <Button
                android:text="@string/subtract"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDepthMinus"
                android:onClick="onDepthMinus"/>

            <TextView
                android:text="6"
                android:layout_height="wrap_content"
                android:id="@+id/depthValue"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_width="50dp" />

            <Button
                android:text="@string/add"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDepthPlus"
                android:onClick="onDepthPlus"/>
            <Button
                android:text="@string/rightSymbol"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDepthMultiply"
                android:onClick="onDepthMultiply"/>
        </LinearLayout>

        <LinearLayout
            android:layout_column="1"
            android:layout_row="1"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:text="@string/leftSymbol"
                android:layout_height="wrap_content"
                android:id="@+id/buttonOperatorLeft"
                android:layout_width="50dp"
                android:onClick="onOperatorLeft"/>

            <TextView
                android:text="+ - * /"
                android:layout_height="wrap_content"
                android:id="@+id/operatorValue"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_width="150dp" />

            <Button
                android:text="@string/rightSymbol"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonOperatorRight"
                android:onClick="onOperatorRight"/>
        </LinearLayout>


    </GridLayout>

    <Button
        android:text="@string/play_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:textSize="36sp"
        android:textAlignment="center"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:onClick="onCustomPlay"
        android:textAllCaps="true" />

</LinearLayout>