<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.arnhom.cryptoku.activities.cryptokuMain">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <SurfaceView
        android:id="@+id/main_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_above="@+id/buttonNewPuzzle"
                android:layout_toStartOf="@+id/buttonResetPuzzle"
                android:layout_alignParentEnd="true"
                android:layout_height="150dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/solutionTextView"
                        android:textSize="24sp" />
                </LinearLayout>
            </ScrollView>

            <Button
                android:text="@string/button_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonResetPuzzle"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:onClick="onResetButton"
                android:textAlignment="center"
                android:layout_toEndOf="@+id/buttonGetSolution" />

            <Button
                android:text="@string/button_getsolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/buttonGetSolution"
                android:onClick="onGetSolutionButton"
                android:textAlignment="center" />

            <Button
                android:text="@string/button_newpuzzle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonNewPuzzle"
                android:onClick="onNewPuzzleButton"
                android:textAlignment="center"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/buttonGetSolution" />

        </RelativeLayout>

    </FrameLayout>

</FrameLayout>
